SW-9855 Refactored: Prevent the jumping when the button is clicked and the loading indicator is shown

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/confirm.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/confirm.less
@@ -116,7 +116,7 @@
         border: 2px solid @border-color;
         border-top: 2px solid darken(@border-color, 50%);
         display: block;
-        position: absolute;
+        position: relative;
         left: 50%;
     }
 }
